# BrainrotBalls

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/glad/: glad.h
src/: glad.c  main.cpp
